force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>Customer Care quote. Generated from a Customer Care Work Order site visit. Drives EPO/PO outcome — lines flag whether each item is billable, warranty, goodwill, or pending determination.</description>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>