force-app/main/default/objects/Quote__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The community package this quote is pricing. Package drives line item scope and BMG contracted rates.</description>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes_Community_Package</relationshipName>
    <type>Lookup</type>
</CustomField>