force-app/main/default/objects/Quote__c/fields/Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding__c</fullName>
    <label>Days Outstanding</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>