force-app/main/default/objects/Quote__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builder division account this quote is for. Required on all production install quotes.</description>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes_Division_Account</relationshipName>
    <type>Lookup</type>
</CustomField>