force-app/main/default/objects/Quote__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>Total estimated COGS (labor + materials) for this quote. Used for gross margin calculation.</description>
    <label>Estimated Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>