force-app/main/default/objects/Quote__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>Total Amount - Estimated Cost. Calculated field or set by Apex when quote lines are finalized.</description>
    <label>Gross Margin ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>