force-app/main/default/objects/Quote__c/fields/Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Pct__c</fullName>
    <description>Gross Margin / Total Amount. Set by Apex when quote lines are finalized.</description>
    <label>Gross Margin %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>