force-app/main/default/objects/Quote__c/fields/Pricing_Book__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BMG pricing book used to populate contracted rates on this quote. Set from Community Package when quote is generated.</description>
    <label>Pricing Book</label>
    <referenceTo>Builder_Pricing_Book__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes_Pricing_Book</relationshipName>
    <type>Lookup</type>
</CustomField>