force-app/main/default/objects/Quote__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The approved takeoff that generated this quote. Takeoff line quantities flow into quote line items.</description>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes_Takeoff</relationshipName>
    <type>Lookup</type>
</CustomField>