force-app/main/default/objects/Quote__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Quote_Line_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>