force-app/main/default/objects/Quote__c/fields/Warranty_Total__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Total__c</fullName>
    <label>Warranty Total</label>
    <summarizedField>Quote_Line_Item__c.Line_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Quote_Line_Item__c.Determination__c</field>
        <operation>equals</operation>
        <value>Warranty</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>