force-app/main/default/objects/Quote__c/recordTypes/Customer_Care.recordType-meta.xml
<RecordType>
    <fullName>Customer_Care</fullName>
    <active>true</active>
    <description>Quote for a customer care, repair, EPO, or warranty resolution job. Created from CC Console.</description>
    <label>Customer Care</label>
</RecordType>