force-app/main/default/objects/Quote__c/recordTypes/Production_Install.recordType-meta.xml
<RecordType>
    <fullName>Production_Install</fullName>
    <active>true</active>
    <description>Quote for a builder production install job. Generated from an approved Takeoff, scoped by Community Package, priced from the active BMG Pricing Book.</description>
    <label>Production Install</label>
</RecordType>