force-app/main/default/objects/Quote__c/listViews/Pending_Approval_Lawn_Care_Quote.listView-meta.xml
<ListView>
    <fullName>Pending_Approval_Lawn_Care_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Pending_Approval_Lawn_Care</label>
    <queue>Pending_Approval_Lawn_Care</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>